--- a/mobile/package.json
+++ b/mobile/package.json
@@ -12,6 +12,7 @@
     "@expo-google-fonts/archivo": "^0.2.3",
     "@expo-google-fonts/poppins": "^0.2.3",
     "@react-native-community/async-storage": "^1.12.1",
+    "@react-native-community/datetimepicker": "6.7.3",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/picker": "^1.8.1",
     "@react-navigation/bottom-tabs": "^6.5.8",
